Fix: Disable zoom on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@ body {
   font-family: 'Courier Prime', monospace;
 }
 
+html, body {
+  touch-action: manipulation;
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
